Add test domain for Domain Connect

--- a/pages/domainchief/developers/domain-connect.mdx
+++ b/pages/domainchief/developers/domain-connect.mdx
@@ -36,6 +36,10 @@ The asynchronous OAuth-based flow is not currently supported.
 
 Unlike some DNS providers, **Domain Chief automatically discovers and indexes Domain Connect templates daily**. You do not need to contact us for template onboarding - simply publish your template according to the Domain Connect specification, and it will be automatically discovered if every feature is supported.
 
+## Testing Your Template
+
+You can test your Domain Connect template integration with Domain Chief by using the following test domain: `domainchief.app`. This domain is configured to use Domain Chief's DNS and will allow you to verify that your template is discovered and supported.
+
 ### Template Requirements
 
 Your templates must be:
